* Fix avatar image getting formatting on height-constrained devices * Temp. fixed Scroll to Top visibility on light mode * Added quick view resume link to 404 error page

--- a/src/styles/Topbar.module.css
+++ b/src/styles/Topbar.module.css
@@ -18,9 +18,8 @@
     align-items: center;
     justify-content: flex-start;
     height: 100%;
-    flex-wrap: nowrap;
     flex-grow: 1;
-
+    
     & img, h1 {
         cursor: pointer;
     }
